Changed File Name from Index to index

--- a/BookDetails.html
+++ b/BookDetails.html
@@ -11,7 +11,7 @@
 	<h1>Welcome To Book Management System</h1>
 </div><br><br>
 <div class="divbutton">
-	<a href="Index.html"><button type="button" class="button" style="width:200px;" >Home</button></a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+	<a href="index.html"><button type="button" class="button" style="width:200px;" >Home</button></a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
 	<a href="BookDetails.html"><button type="button" class="button">Show All the Books</button></a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
 	<a href="RegisterNewBook.html"><button type="button" class="button">Register New Book</button></a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
 	<a href="SearchBook.html"><button type="button" class="button">Search for Book</button></a>
