--- a/RegisterNewBook.html
+++ b/RegisterNewBook.html
@@ -4,7 +4,7 @@
 <head>
 	<title>Book Management System</title>
 	<link rel="stylesheet" type="text/css" href="css\style1.css">
-	<script type="text/javascript" src="javaScript\formscript.js"></script>
+	<script type="text/javascript" src="JavaScript\formscript.js"></script>
 </head>
 <body>
 	<div class="divheader">
