Added Functionality to Cancel Button

--- a/RegisterNewBook.html
+++ b/RegisterNewBook.html
@@ -51,7 +51,7 @@
 			<span id="errormessagedescription"></span><br>
 			<p style="padding-left:120px;">
 			<input type="button" onclick="validateForm('bysubmit')" style="border-radius:4px;font-weight:bold;width:100px;height:35px;background-color:#6699ff; border:none; color:white;" value="Register">&nbsp;&nbsp;&nbsp;
-			<input type="button" style="border-radius:4px;font-weight:bold;width:100px;height:35px;background-color:#6699ff; border:none; color:white;" value="Cancel">
+			<input type="button" onclick="clearForm()" style="border-radius:4px;font-weight:bold;width:100px;height:35px;background-color:#6699ff; border:none; color:white;" value="Cancel">
 
 			</p>
 		</form>
