Added BookDetails Code

--- a/BookDetails.html
+++ b/BookDetails.html
@@ -7,30 +7,69 @@
 
 </head>
 <body>
-<div class="divheader">
-	<h1>Welcome To Book Management System</h1>
-</div><br><br>
-<div class="divbutton">
-	<a href="index.html"><button type="button" class="button" style="width:200px;" >Home</button></a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-	<a href="BookDetails.html"><button type="button" class="button">Show All the Books</button></a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-	<a href="RegisterNewBook.html"><button type="button" class="button">Register New Book</button></a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-	<a href="SearchBook.html"><button type="button" class="button">Search for Book</button></a>
-</div>
-
-
-
-
-
-<div class="divfooter">
-<h3>Address</h3>
-<address>
-<b>FPT India Private Limited</b><br>
-Plot No. 42&43,ASR Crest,Image Garden Road<br>
-Madhapur,Hyderabad-500081<br>
-Reach us: <a href="outlook.com">Admin@fsoft.com.vn</a>.<br>
-Visit us at: <a href="www.fptsoftware.com">FPT</a>.<br>
-Tel :(+91)987 654 3210<br>
-</address>
-</div>
+	<div class="divheader">
+		<h1>Welcome To Book Management System</h1>
+	</div><br><br>
+	<div class="divbutton">
+		<a href="index.html"><button type="button" class="button" style="width:200px;" >Home</button></a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+		<a href="BookDetails.html"><button type="button" class="button">Show All the Books</button></a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+		<a href="RegisterNewBook.html"><button type="button" class="button">Register New Book</button></a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+		<a href="SearchBook.html"><button type="button" class="button">Search for Book</button></a>
+	</div><br><br>
+	<div>
+		<table class="table">
+			<tr class="tr">
+				<th class="th">BookName</th>
+				<th class="th">AuthorName</th>
+				<th class="th">Cost</th>
+				<th class="th">Category</th>
+				<th class="th">Email</th>
+				<th class="th">Description</th>
+			</tr>
+			<tr class="tr">
+				<td class="td">Peter</td>
+				<td class="td">Griffin</td>
+				<td class="td">$100</td>
+				<td class="td">Education</td>
+				<td class="td">abubakar@official.mab</td>
+				<td class="td">Spiderman Comic</td>
+			</tr>
+			<tr class="tr">
+				<td class="td">Lois</td>
+				<td class="td">Griffin</td>
+				<td class="td">$150</td>
+				<td class="td">Education</td>
+				<td class="td">abubakar@official.mab</td>
+				<td class="td">Spiderman Comic</td>
+			</tr>
+			<tr class="tr">
+				<td class="td">Joe</td>
+				<td class="td">Swanson</td>
+				<td class="td">$300</td>
+				<td class="td">Education</td>
+				<td class="td">abubakar@official.mab</td>
+				<td class="td">Spiderman Comic</td>
+			</tr>
+			<tr class="tr">
+				<td class="td">Cleveland</td>
+				<td class="td">Brown</td>
+				<td class="td">$250</td>
+				<td class="td">Education</td>
+				<td class="td">abubakar@official.mab</td>
+				<td class="td">Spiderman Comic</td>
+			</tr>
+		</table>
+	</div><br><br>
+	<div class="divfooter">
+		<h3>Address</h3>
+		<address>
+			<b>FPT India Private Limited</b><br>
+			Plot No. 42&43,ASR Crest,Image Garden Road<br>
+			Madhapur,Hyderabad-500081<br>
+			Reach us: <a href="outlook.com">Admin@fsoft.com.vn</a>.<br>
+			Visit us at: <a href="www.fptsoftware.com">FPT</a>.<br>
+			Tel :(+91)987 654 3210<br>
+		</address>
+	</div>
 </body>
 </html>
